testsuite/tests/ghc-regress/rename/should_fail/all.T

include ($confdir ++ "/../vanilla-test.T")

-- Args to vtcf are: extra compile flags

test "rnfail001" { vtcf("") }
test "rnfail002" { vtcf("") }
test "rnfail003" { vtcf("") }
test "rnfail004" { vtcf("") }
test "rnfail007" { vtcf("") }
test "rnfail008" { vtcf("") }
test "rnfail009" { vtcf("") }
test "rnfail010" { vtcf("") }
test "rnfail011" { vtcf("") }
test "rnfail012" { vtcf("") }
test "rnfail013" { vtcf("") }
test "rnfail014" { vtcf("") }
test "rnfail015" { vtcf("") }
test "rnfail016" { vtcf("") }
test "rnfail017" { vtcf("") }
test "rnfail018" { vtcf("") }
test "rnfail019" { vtcf("") }
test "rnfail020" { vtcf("") }
test "rnfail021" { vtcf("") }
test "rnfail022" { vtcf("") }
test "rnfail023" { vtcf("") }
test "rnfail024" { vtcf("") }
test "rnfail025" { vtcf("") }
test "rnfail026" { vtcf("") }
test "rnfail027" { vtcf("") }
